# ncnn_bin

./: .gitignore  TODO.md  benchmark_pipeline.py  build_with_asan.sh
bdreader-ncnn-upscaler/: CMakeLists.txt  MEMORY_LEAK_TEST_REPORT.md  VALGRIND_TEST_REPORT.md
bdreader-ncnn-upscaler/src/: engine_factory.cpp  engine_factory.hpp  main.cpp  options.cpp  options.hpp  protocol_request_payload_test.cpp  protocol_v2.hpp
bdreader-ncnn-upscaler/src/engines/: base_engine.hpp  ncnn_upscaler_engine.cpp  ncnn_upscaler_engine.hpp  realcugan_engine.cpp  realcugan_engine.hpp  realesrgan_engine.cpp  realesrgan_engine.hpp
bdreader-ncnn-upscaler/src/modes/: batch_mode.cpp  batch_mode.hpp  file_mode.cpp  file_mode.hpp  stdin_mode.cpp  stdin_mode.hpp
bdreader-ncnn-upscaler/src/utils/: MEMORY_MANAGEMENT.md  blocking_queue.hpp  image_io.cpp  image_io.hpp  image_padding.hpp  logger.cpp  logger.hpp  tiling.cpp  tiling.hpp  tiling_processor.cpp  tiling_processor.hpp
docs/: BATCH_PROCESSING_SPEC.md  BATCH_VS_SINGLE_ANALYSIS.md  CRITICAL_FIX_STDOUT_BUFFERING.md  FINAL_TILING_REPORT.md  INTEGRATION_SUMMARY.md  NCNN_STDIN_STDOUT_SPEC.md  OPTIMIZATION_OPPORTUNITIES.md  PERFORMANCE_BENCHMARKS.md  QUICK_REFERENCE.md  RAM_PERFORMANCE_TEST_REPORT.md  RAPPORT_FUITES_MEMOIRE.md  RAPPORT_MODIFICATIONS_FUITES_MEMOIRE.md  RAPPORT_TESTS_COMPILATION.md  RAPPORT_TESTS_FINAUX_COMPLETS.md  RAPPORT_TESTS_FONCTIONNELS.md  README.md  README_TESTING.md  REAL_IMAGES_GPU_RESULTS.md  RESUME_TESTS_FINAUX.md  STATUS_IMPLEMENTATION.md  SUMMARY_COMPLETE.md  TILING_IMPLEMENTATION.md  WORKING_MODELS.md
test_scripts/: test_all_models.py  test_asan_memory.sh  test_batch_debug.py  test_batch_debug.sh  test_batch_stdin.py  test_multiple_batches.sh  test_performance.sh  test_stdin_keep_alive.py
tests/: batch_vs_single_comparison.py  protocol_v2_integration.py  protocol_v2_keepalive.py  quick_ram_test.py  ram_performance_tests.py  (+5 more)
